# LuaJIT

./: .gitignore  CMakeLists.txt
doc/: CMakeLists.txt
dynasm/: CMakeLists.txt
etc/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt
src/platform/Win32/Object/: lj_vm.lib
src/platform/Win64/Object/: lj_vm.lib
