Add_Library(LuaJIT "")

get_filename_component(ParentDirectory ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)
include(dynasm/CMakeLists.txt)
include(src/CMakeLists.txt)

target_include_directories(LuaJIT PUBLIC ${ParentDirectory} ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(LuaJIT PUBLIC _CRT_SECURE_NO_WARNINGS)

if (${WIN32} AND CMAKE_SIZEOF_VOID_P EQUAL 4)
    target_include_directories(LuaJIT PRIVATE src)
    target_include_directories(LuaJIT PRIVATE src/platform/Win32)
    target_include_directories(LuaJIT PRIVATE src/platform/Win32/host)
    target_link_libraries(LuaJIT ${CMAKE_CURRENT_SOURCE_DIR}src/platform/Win32/Object/lj_vm.lib)
elseif(${WIN32} AND CMAKE_SIZEOF_VOID_P EQUAL 8)
    target_include_directories(LuaJIT PRIVATE src)
    target_include_directories(LuaJIT PRIVATE src/platform/Win64)
    target_include_directories(LuaJIT PRIVATE src/platform/Win64/host)
    target_link_libraries(LuaJIT ${CMAKE_CURRENT_SOURCE_DIR}/src/platform/Win64/Object/lj_vm.lib)
endif()
